tests/miniJava/pos/001058_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( this ) System.out.println ( { } ) ; else while ( 0 ) { } } }
