tests/miniJava/neg/006851_mutation.MiniJava
class while { public static void Main ( String [ ] java ) { { } } }
